Nettoyage des scripts pour les packs

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "^10.8.1"
   },
   "scripts": {
-    "pushLDBtoYML": "node ./tools/pushLDBtoYML.mjs",
-    "pullYMLtoLDB": "node ./tools/pullYMLtoLDB.mjs"
+    "LDBtoYML": "node ./tools/LDBtoYML.mjs",
+    "YMLtoLDB": "node ./tools/YMLtoLDB.mjs"
   }
 }
