--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,7 +108,7 @@ jobs:
       
       # Pull YAML to LDB packs
       - name: Build Packs
-        run: npm run pullYMLtoLDB
+        run: npm run YMLtoLDB
 
       # Create a "system.zip" archive containing all the module's required files.
       # If you have other directories or files that will need to be added to
@@ -160,4 +160,4 @@ jobs:
           method: 'POST'
           contentType: 'application/json'
           customHeaders: '{"Authorization": "${{ secrets.FVTT_PACKAGE_RELEASE_TOKEN }}"}'
-          data: '{"id": "cleenmain","dry-run":false,"release":{"version":"${{github.event.release.tag_name}}","manifest":"https://github.com/12-Monkeys-Developers/cleenmain/releases/download/${{github.event.release.tag_name}}/system.json","notes":"https://github.com/12-Monkeys-Developers/cleenmain/blob/main/CHANGELOG.md","compatibility":{"minimum":"12","verified":"12"}}}'
+          data: '{"id": "cleenmain","dry-run":false,"release":{"version":"${{github.event.release.tag_name}}","manifest":"https://github.com/12-Monkeys-Developers/cleenmain/releases/download/${{github.event.release.tag_name}}/system.json","notes":"https://github.com/12-Monkeys-Developers/cleenmain/blob/main/CHANGELOG.md","compatibility":{"minimum":"13","maximum":"13","verified":"13"}}}'
